<resources>
    <string name="app_name">getBooks</string>
    <string name="price">Price:</string>
    <string name="book_id">Book ID:</string>
    <string name="id">ID</string>
    <string name="author">Author:</string>
    <string name="tvAuthor">Author</string>
    <string name="category">Category:</string>
    <string name="tvCategory">Category</string>
    <string name="isbn">ISBN:</string>
    <string name="tvisbn">ISBN</string>
    <string name="search_here">Search here</string>
    <string name="all">All</string>
    <string name="sales">Sales</string>
    <string name="children">Children</string>
    <string name="finance">Finance</string>
    <string name="non_fiction">Non-Fiction</string>
    <string name="technical">Technical</string>
    <string name="save">Save</string>
    <string name="item">Edit Book</string>
    <string name="getbooks">GetBooks</string>
    <string name="edit_book_activity">Edit Book</string>
    <string name="title">Title:</string>
    <string name="qty">Qty:</string>
    <string name="cancel">cancel</string>
    <string name="btncancel">Cancel</string>

</resources>
