<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sandy.getbooks.BrowseActivity">
    <item
        android:id="@+id/item0"
        android:orderInCategory="100"
        android:title="@string/all"
        app:showAsAction="never" />

    <item
        android:id="@+id/item1"
        android:orderInCategory="101"
        android:title="@string/children"
        app:showAsAction="never" />

    <item
        android:id="@+id/item2"
        android:orderInCategory="102"
        android:title="@string/finance"
        app:showAsAction="never" />

    <item
        android:id="@+id/item3"
        android:orderInCategory="103"
        android:title="@string/non_fiction"
        app:showAsAction="never" />

    <item
        android:id="@+id/item4"
        android:orderInCategory="104"
        android:title="@string/technical"
        app:showAsAction="never" />

</menu>
